--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .con-ticks a{
-        text-decoration: underline;
+        text-decoration: none;
         font-weight: bold;
     }
     .con-ticks .dropdown-menu{
@@ -18,6 +18,9 @@ word-wrap: break-word;
 .img-extension img{
 height: 43px;
 border-radius:5px;
+}
+.ex-row a:hover{
+text-decoration: none;
 }
   .embed-container {
     position: relative;
