--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,22 @@ border-radius:5px;
 .ex-row a:hover{
 text-decoration: none;
 }
+.form_attick .extract-tickat #images_carousel {
+    float: left;
+    margin-bottom: 0;
+    width: 31%;
+}
+.form_attick .extract-info {
+    overflow: hidden;
+    padding-left: 10px;
+}
+#form_tick .alert.alert-info{
+padding:180px 120px
+}
+.form_cretick .row-fluid.embed-container{
+height: 400px;
+width: 487px
+}
   .embed-container {
     position: relative;
     padding-top: 30px; /* IE6 workaround*/
